# T-FlowS

./: .gitignore  LICENSE  LICENSE.txt
Sources/: Makefile.am  configure.ac  first  last
Sources/CGNS/: README  install_cgns.sh
Sources/Convert/: Allocate_Memory.f90  Calculate_Geometry.f90  Cell_Numbering_Cgns.f90  Cell_Numbering_Neu.f90  Cgns_Mod.f90  Compute_Geometry.f90  Connect_Domains.f90  Find_Faces.f90  Grid_Topology.f90  Load_Cgns.f90  Load_Neu.f90  Logo_Con.f90  Main_Con.f90  install_cgns.sh  makefile
Sources/Convert/Cgns_Mod/: Initialize_Counters.f90  Mark_Bound_Cond.f90  Merge_Nodes.f90  Open_File.f90  Print_Base_Info.f90  Print_Coordinate_Info.f90  Read_Base_Info.f90  Read_Block_Info.f90  Read_Block_Type.f90  Read_Bnd_Conds_Data.f90  Read_Bnd_Conds_Info.f90  Read_Coordinate_Array.f90  Read_Coordinate_Info.f90  Read_Number_Of_Bases_In_File.f90  Read_Number_Of_Blocks_In_Base.f90  Read_Number_Of_Bnd_Conds_In_Block.f90  Read_Number_Of_Coordinates.f90  Read_Number_Of_Coordinates_In_Block.f90  Read_Number_Of_Element_Sections.f90  Read_Number_Of_Zones_In_Base.f90  Read_Section_Connections.f90  Read_Section_Info.f90  Read_Zone_Info.f90  Read_Zone_Type.f90
Sources/Divide/: Allocate_Additional.f90  BCelLoa.f90  ComSav.f90  Compute_Eigenvalues.f90  Create_Buffers_And_Save.f90  Create_Maps.f90  DivLoa.f90  Divisor.f90  EpsPar.f90  Factor.f90  Factorize_Number.f90  Inertia.f90  IniDiv.f90  Jacobi.f90  Load_Cns.f90  Load_Gmv.f90  Load_Gmv_Faces.f90  Load_Shadow_Faces.f90  LogoDiv.f90  Logo_Div.f90  Logo_Divide.f90  Main.f90  Main_Div.f90  Makefile.am  Number.f90  Save_Com.f90  Save_Eps_Decomposed.f90  Save_Scripts.f90  Split.f90  Split_Subdomain.f90  logo_div.c  makefile
Sources/Generate/: Are_Nodes_Twins.f90  Atanh.f90  Calc1.f90  Calc2.f90  Calculate_Grid_Geometry.f90  Calculate_Node_Coordinates.f90  Compute_Grid_Geometry.f90  Compute_Node_Coordinates.f90  Connect_Blocks.f90  Connect_Copy.f90  Connect_Periodicity.f90  CopyBC.f90  Determine_Grid_Connectivity.f90  Distribute_Nodes.f90  Distribute_Regions.f90  Domain_Mod.f90  Domain_Mod_Allocate_Lines.f90  Domain_Mod_Allocate_Regions.f90  FinLin.f90  FinSur.f90  Find_Line.f90  Find_Surface.f90  Fuzion.f90  GenLoa.f90  Generator.f90  IniGen.f90  IsLine.f90  IsTwin.f90  Is_Line_In_Block.f90  Laplac.f90  Laplace.f90  Linija.f90  Load_Domain.f90  Logo.f90  LogoGen.f90  Logo_Gen.f90  Main.f90  Main_Gen.f90  Makefile  Makefile.am  (+17 more)
Sources/Libraries/: install_cgns.sh  readme
Sources/Libraries/Cgns/: Save_Mesh_Seq_CGNS_Lib.f90  readme
Sources/Modules/: Block_Mod.f90  Cell_Mod.f90  Domain_Mod.f90  Grid_Mod.f90  Line_Mod.f90  Makefile.am  Point_Mod.f90  Unknown_Mod.f90  all_mod.f90  allp_mod.f90  allt_mod.f90  div_mod.f90  gen_mod.f90  les_mod.f90  neu_mod.f90  par_mod.f90  pro_mod.f90  rans_mod.f90  sol_mod.f90
Sources/Neu2TFlowS/: Append_Data_To_Array_Rank_1.f90  Append_Data_To_Array_Rank_2.f90  Append_Int_Ar_To_Array_Rank_1.f90  Calc4.f90  Calc4.f90_gfortran  Compute_Geometry.f90  Connect3.f90  Connect_Domains.f90  FindSides.f90  Find_Faces.f90  Find_Sides.f90  Grid_Topology.f90  Load_Cgns.f90  Load_Neu.f90  LogoNeu.f90  Logo_Neu.f90  Main.f90  Main_Neu.f90  Makefile  Makefile.am  Mesh_Topology.f90  Neu2TFlowS.f90  Read9Ln.f90  ReadFluentNeu.f90  TopolM.f90  cgns_mod.f90  cyl_adf.cgns  logo_neu.c  makefile
Sources/Process/: Add_Fields_To_Grid_Par.f90  Add_Fields_To_Grid_Seq.f90  Advection_Scheme.f90  Allocate_Memory.f90  Allocate_Variables.f90  Balance_Mass.f90  BiCG.f90  BouLoa.f90  Bulk_Mod.f90  CalBou.f90  CalMinMax.f90  CalcConvect.f90  CalcF22.f90  CalcG.f90  CalcMn.f90  CalcMn_Cylind.f90  CalcPF.f90  CalcPS.f90  CalcSGS.f90  CalcSGS_Dynamic.f90  CalcSc.f90  CalcShear.f90  CalcStresses.f90  CalcTurb.f90  CalcVISt_EBM.f90  CalcVISt_RSM.f90  CalcVort.f90  Calculate_Face_Geometry.f90  Calculate_Mean.f90  Calculate_Minimum_Maximum.f90  Calculate_Shear_And_Vorticity.f90  Calculate_Vorticity.f90  Cgns_Mod_Add_Fields_To_Grid_Seq.f90  CnsLoa.f90  Compute_Face_Geometry.f90  Compute_Fluxes.f90  Compute_Geometry.f90  Compute_Gradient_Matrix.f90  Compute_Mean.f90  Compute_Minimum_Maximum.f90  (+114 more)
Sources/Process/Bulk_Mod/: Compute_Fluxes.f90  Monitoring_Planes_Areas.f90
Sources/Process/Communication/: Makefile.am
Sources/Process/Control_Mod/: Linear_Solver_For_Energy.f90  Linear_Solver_For_Momentum.f90  Linear_Solver_For_Pressure.f90  Linear_Solver_For_Turbulence.f90  Open_File.f90  Read_Char_Item.f90  Read_Real_Array.f90  Read_Real_Item.f90  Simple_Underrelaxation_Energy.f90  Simple_Underrelaxation_Momentum.f90  Simple_Underrelaxation_Pressure.f90  Simple_Underrelaxation_Turbulence.f90  Tolerance_Energy_Solver.f90  Tolerance_Momentum_Solver.f90  Tolerance_Pressure_Solver.f90  Tolerance_Turbulence_Solver.f90  Turbulence_Model.f90
Sources/Process/Grad_Mod/: Allocate_Memory.f90  Calculate_Matrix.f90  Correct_Bad_Cells.f90  Find_Bad_Cells.f90  For_P.f90  For_Phi.f90
Sources/Process/Info_Mod/: Bulk_Fill.f90  Bulk_Print.f90  Bulk_Start.f90  Iter_Fill.f90  Iter_Fill_At.f90  Iter_Print.f90  Iter_Start.f90  Time_Fill.f90  Time_Print.f90  (+1 more)
Sources/Shared/: Approx.f90  Bnd_Cond_Mod.f90  Boundary_Condition_Mod.f90  CasSav.f90  Cgns_Mod.f90  Cgns_Mod_Add_Fields_To_Grid_Par.f90  Cgns_Mod_Add_Fields_To_Grid_Seq.f90  Cgns_Mod_Par.f90  Cgns_Mod_Save_Grid_Par.f90  Cgns_Mod_Save_Grid_Seq.f90  Cgns_Mod_Seq.f90  Comm_Mod_Par.f90  Comm_Mod_Seq.f90  Const_Mod.f90  Count_Materials.f90  DISort.f90  EpsWho.f90  GenSav.f90  GeoLoa.f90  GeoLoa_Scotti.f90  GeoSav.f90  GeoSav_Scotti.f90  Grid_Mod.f90  Grid_Mod_Allocate_Cells.f90  Grid_Mod_Allocate_Faces.f90  Grid_Mod_Allocate_Nodes.f90  INSort.f90  ISort.f90  Load_Geo.f90  Makefile.am  Matrix_Mod.f90  Matrix_Mod_Allocate.f90  Matrix_Mod_Topology.f90  NamFil.f90  Name_File.f90  Probe1D_nodes.f90  Probe1D_nodes_gen.f90  Probe_1D.f90  Probe_1D_Nodes.f90  Probe_1D_Nodes_Gen.f90  (+50 more)
Sources/Utilities/: A2B.f90  B2A.f90  Command_To_Control.f90  Connect_DAT.c  Connect_Dat.c  Connect_GMV.c  Connect_Gmv.c  Create_Control_Directory.f90  Makefile.am  Stretch.f90  Tokenizer.f90  interpolate_on_new_mesh.f90  sub_ini.f90
(+966 files in other folders)
