AC_INIT([T-FlowS],[0.1])

AM_INIT_AUTOMAKE

AC_PROG_FC
AC_PROG_CC

AC_PROG_RANLIB

AC_OUTPUT( 
  Makefile				\
  Modules/Makefile			\
  Shared/Makefile			\
  Generate/Makefile			\
  Divide/Makefile			\
  Neu2TFlowS/Makefile			\
  Process/Makefile			\
  Process/Communication/Makefile	\
  Process/Linear_Solvers/Makefile	\
  Process/User/Makefile			\
  Utilities/Makefile
)
