AC_INIT([T-FlowS],[0.1])

AM_INIT_AUTOMAKE

AC_PROG_FC
AC_PROG_CC

AC_PROG_RANLIB

AC_OUTPUT( 
  Makefile				\
  Shared/Makefile			\
  Generate/Makefile			\
  Divide/Makefile			\
  Neu2TFlowS/Makefile			\
  Process/Makefile			\
  Process/Communication/Makefile	\
  Process/Matrix_Mod/Makefile		\
  Process/Solvers_Mod/Makefile		\
  Process/Var_Mod/Makefile		\
  Process/Turbulence/Makefile		\
  Process/User/Makefile			\
  Utilities/Makefile
)
