bin_PROGRAMS = Divide

Divide_SOURCES =		\
  BCelLoa.f90			\
  Divisor.f90			\
  Load_Cns.f90			\
  Load_Gmv.f90			\
  Factorize_Number.f90		\
  Inertia.f90			\
  Compute_Eigenvalues.f90	\
  Logo_Divide.f90		\
  Number.f90			\
  Save_Com.f90			\
  Save_Eps_Decomposed.f90	\
  Save_Scripts.f90		\
  Split.f90

SUBDIRS = ../Modules		\
          ../Shared

LDADD = ../Modules/libModules.a	\
        ../Shared/libShared.a

INCLUDE = -I@top_srcdir@/
