bin_PROGRAMS = Generate

Generate_SOURCES =	 		\
  Point_Mod.f90				\
  Line_Mod.f90				\
  Block_Mod.f90				\
  Region_Mod.f90			\
  Domain_Mod.f90			\
  Are_Nodes_Twins.f90			\
  Compute_Node_Coordinates.f90		\
  Compute_Grid_Geometry.f90		\
  Connect_Blocks.f90			\
  Connect_Periodicity.f90		\
  Connect_Copy.f90			\
  Determine_Grid_Connectivity.f90	\
  Distribute_Nodes.f90			\
  Distribute_Regions.f90		\
  Find_Line.f90				\
  Find_Surface.f90			\
  Is_Line_In_Block.f90			\
  Load_Domain.f90			\
  Laplac.f90				\
  Logo.f90				\
  Main.f90				\
  Print_Grid_Statistics.f90		\
  Refine_Grid.f90			\
  Refine_Marked_Cells.f90		\
  Smooth_Grid.f90			\
  Swap_Integers.f90			\
  Swap_Reals.f90			\
  Which_Node.f90

SUBDIRS = ../Shared

LDADD = ../Shared/libShared.a

INCLUDE = -I@top_srcdir@/
