noinst_LIBRARIES = libModules.a

libModules_a_SOURCES = 		\
  Point_Mod.f90			\
  Line_Mod.f90			\
  Block_Mod.f90			\
  Range_Mod.f90			\
  Material_Mod.f90 		\
  Boundary_Condition_Mod.f90	\
  Domain_Mod.f90		\
  Cell_Mod.f90			\
  Grid_Mod.f90			\
  allp_mod.f90			\
  allt_mod.f90			\
  all_mod.f90			\
  con_mod.f90			\
  div_mod.f90			\
  gen_mod.f90			\
  les_mod.f90			\
  neu_mod.f90			\
  par_mod.f90			\
  pro_mod.f90			\
  rans_mod.f90			\
  sol_mod.f90

INCLUDE = -I@top_srcdir@/
