bin_PROGRAMS = Neu2TFlowS

Neu2TFlowS_SOURCES =		\
  neu_mod.f90			\
  Compute_Geometry.f90		\
  Connect_Domains.f90		\
  Find_Faces.f90		\
  Logo.f90			\
  Main.f90			\
  Load_Neu.f90			\
  Grid_Topology.f90		\
  Read_Line.f90

SUBDIRS = ../Shared

LDADD = ../Shared/libShared.a

INCLUDE = -I@top_srcdir@/
