noinst_LIBRARIES = libShared.a

libShared_a_SOURCES = 		\
  Approx.f90			\
  CasSav.f90			\
  CouMat.f90			\
  DISort.f90			\
  Distance.f90			\
  Distance_Squared.f90		\
  EpsSav.f90			\
  EpsWho.f90			\
  GenSav.f90			\
  GeoLoa.f90			\
  GeoLoa_Scotti.f90		\
  GeoSav.f90			\
  GeoSav_Scotti.f90		\
  INSort.f90			\
  ISort.f90			\
  NamFil.f90			\
  Probe_1D.f90			\
  Probe_1D_Nodes.f90		\
  Probe_1D_Nodes_Gen.f90	\
  Probe_2D.f90			\
  ReadC.f90			\
  RISort.f90			\
  Rnd.f90			\
  RNSort.f90			\
  Sort2.f90			\
  SSort.f90			\
  TestLn.f90			\
  TetVol.f90			\
  ToUppr.f90

INCLUDE = -I@top_srcdir@/
