noinst_LIBRARIES = libShared.a

libShared_a_SOURCES = 		\
  Approx.f90			\
  Count_Materials.f90		\
  DISort.f90			\
  Distance.f90			\
  Distance_Squared.f90		\
  INSort.f90			\
  ISort.f90			\
  Load_Geo.f90			\
  NamFil.f90			\
  Probe_1D.f90			\
  Probe_1D_Nodes.f90		\
  Probe_1D_Nodes_Gen.f90	\
  Probe_2D.f90			\
  ReadC.f90			\
  RISort.f90			\
  Rnd.f90			\
  RNSort.f90			\
  Save_Cas.f90			\
  Save_Cns_Geo.f90		\
  Save_Eps_Cut.f90		\
  Save_Eps_Whole.f90		\
  Save_Gmv_Links.f90		\
  Save_Gmv_Mesh.f90		\
  Sort2.f90			\
  SSort.f90			\
  Tet_Volume.f90		\
  To_Upper_Case.f90

INCLUDE = -I@top_srcdir@/
