bin_PROGRAMS = A2B			\
               B2A			\
               Connect_DAT		\
               Connect_GMV		\
               Create_Control_Directory

A2B_SOURCES = A2B.f90
B2A_SOURCES = B2A.f90

Connect_DAT_SOURCES = Connect_DAT.c
Connect_GMV_SOURCES = Connect_GMV.c

Create_Control_Directory_SOURCES = Create_Control_Directory.f90
