bin_PROGRAMS = A2B			\
               B2A			\
               Connect_Dat		\
               Connect_Gmv		\
               Create_Control_Directory

A2B_SOURCES = A2B.f90
B2A_SOURCES = B2A.f90

Connect_Dat_SOURCES = Connect_Dat.c
Connect_Gmv_SOURCES = Connect_Gmv.c

Create_Control_Directory_SOURCES = Create_Control_Directory.f90
