noinst_LIBRARIES = libCommunication.a

libCommunication_a_SOURCES =	\
  BufLoa.f90			\
  EndPar.f90			\
  Exchng.f90			\
  GloMax.f90			\
  GloMin.f90			\
  GloSum.f90			\
  IGlSum.f90			\
  StaPar.f90			\
  Timex.f90			\
  Wait.f90

SUBDIRS = ../../Shared

LDADD = ../../Shared/libShared.a

INCLUDE = -I@top_srcdir@/
