noinst_LIBRARIES = libCommunication.a

libCommunication_a_SOURCES =	\
  ../Parameters_Mod.f90		\
  ../Bulk_Mod.f90		\
  ../Info_Mod.f90		\
  BufLoa.f90			\
  EndPar.f90			\
  Exchange.f90			\
  GloMax.f90			\
  GloMin.f90			\
  GloSum.f90			\
  IGlSum.f90			\
  StaPar.f90			\
  Timex.f90			\
  Wait.f90

SUBDIRS = ../../Shared

LDADD = ../../Shared/libShared.a

INCLUDE = -I@top_srcdir@/
