noinst_LIBRARIES = libSharedModules.a

libSharedModules_a_SOURCES = 	\
  allp_mod.f90			\
  all_mod.f90			\
  par_mod.f90			\
  Boundary_Condition_Mod.f90	\
  Material_Mod.f90 		\
  Grid_Mod.f90			\
  Matrix_Mod.f90 		\
  Solvers_Mod.f90		\
  Var_Mod.f90			\
  con_mod.f90			\
  div_mod.f90			\
  gen_mod.f90			\
  les_mod.f90			\
  neu_mod.f90			\
  pro_mod.f90			\
  rans_mod.f90

INCLUDE = -I@top_srcdir@/
